fixed some layout issue

--- a/src/components/ContactForm.module.scss
+++ b/src/components/ContactForm.module.scss
@@ -5,10 +5,10 @@
   flex-direction: column;
   justify-content: center;
   background-color: $primary-color;
-  color: $secondary-color;
 
   h1 {
     margin: 2rem auto 1rem auto;
+    color: $secondary-color;
   }
 
   p {
@@ -16,6 +16,7 @@
     margin: 1.7rem auto 1rem auto;
     text-align: justify;
     font-size: 1.2rem;
+    color: white;
   }
 
   form {
@@ -124,7 +125,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: calc(100vh - 100px);
+    // height: calc(100vh - 100px);
 
     p {
       max-width: 80%;
