--- a/src/components/about.module.scss
+++ b/src/components/about.module.scss
@@ -169,7 +169,6 @@
     .grid {
       width: 80%;
       margin: 0 auto;
-      height: calc(100vh - 100px);
       display: grid;
       grid-template-columns: 1fr 1fr;
       column-gap: 20px;
